Bug 691344 - REGRESSION: ps2pdf of 8.70 generates correct hyperlinks but not ps2pdf of 8.71
Summary: REGRESSION: ps2pdf of 8.70 generates correct hyperlinks but not ps2pdf of 8.71
Status: RESOLVED FIXED
Alias: None
Product: Ghostscript
Classification: Unclassified
Component: PDF Writer (show other bugs)
Version: 8.71
Hardware: PC Linux
: P3 normal
Assignee: Ken Sharp
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2010-05-27 20:30 UTC by Till Kamppeter
Modified: 2010-07-06 09:27 UTC (History)
1 user (show)

See Also:
Customer:
Word Size: ---


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Till Kamppeter 2010-05-27 20:30:45 UTC
See the following Ubuntu bug report:

https://bugs.launchpad.net/bugs/583990

In Ubuntu Lucid (Ubuntu 10.04, GS 8.71) hyperlinks generated with ps2pdf12 are broken, but in Karmic (Ubuntu 9.10, GS 8.70) they were correctly generated.

See the Ubuntu bug report for sample files.
Comment 1 Henry Stiles 2010-06-30 20:28:26 UTC
Ken, this is important to the open source community and it is a regression so maybe it could be elevated in priority a bit, I made it p3.
Comment 2 Ken Sharp 2010-07-01 08:26:25 UTC
(In reply to comment #1)
> Ken, this is important to the open source community and it is a regression so
> maybe it could be elevated in priority a bit, I made it p3.

Checking the irc log it looks like Till says this is needed before moving to view PostScript by converting to PDF and opening in xpdf/MuPDF etc. That doesn't make sense to me, as currently viewing PostScript would use GS and the x11alpha device, which doesn't support hyperlinks at all. 

Of course that doesn't get away from it being a bug, but I did think this was working, at least one paying customer uses this (though not with ps2pdf12).
Comment 3 Ken Sharp 2010-07-06 09:27:42 UTC
Fixed in revision 11491, patch here:

http://ghostscript.com/pipermail/gs-cvs/2010-July/011359.html